--- a/stylemain.css
+++ b/stylemain.css
@@ -10,6 +10,13 @@ body{
     flex-flow: row wrap;
     justify-content: flex-end;
 }
+.logo{
+    align-items: center;
+    margin-right: 300px;
+    height: 60px;
+    width: 180px;
+    border: 2px solid #17252A;
+}
 nav ul{
     margin: 7px 10px 0px 10px;
     padding: 0;
