--- a/stylemain.css
+++ b/stylemain.css
@@ -102,5 +102,42 @@ nav li button:hover{
     background-color: #296865;
     transition: all 0.3s;
 }
+.skillcontainer1{
+    display: flex;
+    justify-content: space-around;
+    height: 520px;
+    /*border: 3px solid #17252A;*/
+    background-color: #296865;
+    margin-top: 50px;
+}
+.skill1-para{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 44%;
+    /*border: 2px solid #FEFFFF;
+    /*margin: 20px 0px;*/
+    color: #FEFFFF;
+}
+.skill1{
+    font-family: 'Montserrat',sans-serif;
+    font-weight: 900;
+    font-size: 70px;
+    margin-bottom: 30px;
+    color: #FEFFFF;
+}
+.skill1-img-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 44%;
+    /*border: 2px solid #feffff;
+    /*margin: 20px 0px;*/
+}
+.skill1-img{
+    height: 290px;
+    width: 470px;
+}
 
 
