--- a/stylemain.css
+++ b/stylemain.css
@@ -12,10 +12,15 @@ body{
 }
 .logo{
     align-items: center;
-    margin-right: 300px;
-    height: 60px;
-    width: 180px;
-    border: 2px solid #17252A;
+    image-rendering: crisp-edges;
+    margin-top: 8px;
+    /*margin-right: 280px;
+    /*height: 61.876px;
+    width: 177.958px;
+    /*border: 2px solid #17252A;*/
+    margin-right: 270px;
+    height: 40.706px;
+    width: 241.555px;
 }
 nav ul{
     margin: 7px 10px 0px 10px;
