--- a/stylemain.css
+++ b/stylemain.css
@@ -66,6 +66,7 @@ and for a negative value it will be slightly up*/
 nav li button:hover{
     box-shadow: 3px 3px 10px 0px rgba(0, 0, 0, 0.6);
     font-weight: 500;
+    font-family: 'Montserrat', sans-serif;
     transition: all 0.3s;
 }
 .headline-container{
@@ -83,6 +84,14 @@ nav li button:hover{
     text-align: left;
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
+    opacity: 0;
+    transform: translateY(-20px) rotate(0deg);
+    transition: transform 2s 0.35s;
+    will-change: transform, opacity;
+}
+.headline.is-visible{
+    opacity: 1;
+    transform: rotate(0deg);
 }
 .para-below-headline{
     font-family: 'Work Sans', sans-serif;
@@ -90,6 +99,14 @@ nav li button:hover{
     font-weight: 500;
     line-height: 28px;
     font-size: 18px;
+    opacity: 0;
+    transform: translateY(-20px) rotate(0deg);
+    transition: transform 2s 0.25s;
+    will-change: transform, opacity;
+}
+.para-below-headline.is-visible{
+    opacity: 1;
+    transform: rotate(0deg);
 }
 .btn-headline{
     background-color: #389491;
@@ -130,6 +147,14 @@ nav li button:hover{
     font-size: 70px;
     margin-bottom: 30px;
     color: #FEFFFF;
+    opacity: 0;
+    transform: translateY(2em) rotateZ(0deg);
+    transition: transform 3s .05s cubic-bezier(0,1,.3,1), opacity .3s .05s ease-out;
+    will-change: transform, opacity;
+}
+.skill1.is-visible{
+    opacity: 1;
+    transform: rotateZ(0deg);
 }
 .skill1-img-container{
     display: flex;
@@ -143,6 +168,27 @@ nav li button:hover{
 .skill1-img{
     height: 290px;
     width: 470px;
+    box-shadow: 1em 1em 2em .25em rgba(0,0,0,.2);
+    opacity: 0;
+    transform: translateY(4em) rotateZ(0deg);
+    transition: transform 7s .18s cubic-bezier(0,1,.3,1), opacity .3s .18s ease-out;
+    will-change: transform, opacity;
+}
+.skill1-img.is-visible{
+    opacity: 1;
+    transform: rotateZ(-4deg);
+}
+.skill-description-on-main-page{
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    line-height: 25px;
+    opacity: 0;
+    transform: rotate(0deg);
+    transition: opacity 0.7s .18s ease-out;
+}
+.skill-description-on-main-page.is-visible{
+    opacity: 1;
+    transform: rotate(0deg);
 }
 
 
