--- a/css/stylemain.css
+++ b/css/stylemain.css
@@ -917,7 +917,7 @@ nav ul li{
     margin-top: 15px;
     margin-right: 15px;
 }
-@media (max-width:390px){
+@media (max-width: 26.375rem){
     /* nav span.material-icons{
         display: block;
     } */
@@ -928,8 +928,8 @@ nav ul li{
         display: none;
     }
     .headline-main-contain{
-        height: 360px;
-        width: 360px;
+        height: 22.5rem;
+        /*width: 360px;*/
         display: flex;
         flex-flow: column;
         justify-content: center;
